src/inscription/parser.py
from __future__ import annotations

import re
from dataclasses import dataclass

from .ast import (
    AssignStmt,
    Binary,
    BodyStmt,
    Boolean,
    BufferBinding,
    BufferLoad,
    BufferStoreStmt,
    BufferType,
    Call,
    CallStmt,
    Cast,
    CheckStmt,
    Comparison,
    ConstantDecl,
    Expr,
    FieldAccess,
    FieldAssignStmt,
    ForEachStmt,
    ForStmt,
    Function,
    IfStmt,
    ImportDecl,
    Integer,
    AlignmentOfType,
    LengthOf,
    LayoutRead,
    LayoutWriteStmt,
    OffsetOfField,
    Parameter,
    Program,
    RecordConstructor,
    RecordDecl,
    RecordFieldDecl,
    RecordFieldInit,
    RecordType,
    RequireStmt,
    ReturnType,
    ReturnStmt,
    SetStmt,
    SizeOfType,
    TypeName,
    Unary,
    ValueType,
    Variable,
    ViewBinding,
    ViewType,
    WhenCase,
    WhenExpr,
    WhileStmt,
)
from .diagnostics import InscriptionError

NAME_RE = re.compile(r"[a-z][a-z0-9_]*")
RECORD_NAME_RE = re.compile(r"[A-Z][A-Za-z0-9_]*")
QUALIFIED_RECORD_NAME_RE = re.compile(r"(?:[A-Za-z][A-Za-z0-9_]*\.)*[A-Z][A-Za-z0-9_]*")
TOKEN_RE = re.compile(r"\s*(-?\d+|[A-Z][A-Za-z0-9_]*|[a-z][a-z0-9_]*|[().,])")
RESERVED = {
    "address", "alignment", "and", "arguments", "array", "as", "at", "be", "becomes", "bitwise", "buffer", "by", "call",
    "check", "constant", "divided", "do", "does", "each", "else", "equal", "extern", "false", "filled", "float", "for", "from",
    "function", "gives", "greater", "i1", "i32", "i64", "if", "in", "index", "input", "into", "import",
    "i8", "i16", "is", "layout", "length", "less", "let", "memref", "minus", "module", "no", "not", "or", "otherwise", "output", "packed", "parameters",
    "pointer", "plus", "print", "read", "remainder", "require", "return", "set", "shifted", "size", "takes", "than", "then", "times", "to",
    "track", "true", "u8", "u16", "u32", "u64", "up", "record", "view", "when", "while", "with", "write", "xor", "zero",
}
TYPE_NAMES: set[str] = {"i1", "i8", "i16", "i32", "i64", "u8", "u16", "u32", "u64"}
COMPARATORS: tuple[tuple[tuple[str, ...], str], ...] = (
    (("equal", "to"), "eq"),
    (("not", "equal", "to"), "ne"),
    (("less", "than", "or", "equal", "to"), "sle"),
    (("less", "than"), "slt"),
    (("greater", "than", "or", "equal", "to"), "sge"),
    (("greater", "than"), "sgt"),
)
CONNECTOR_WORDS = {"of", "from", "to", "at", "in", "into", "between", "and", "with", "by"}
BUFFER_LENGTH_PATTERN = r"(?:-?\d+|[a-z][a-z0-9_]*|\([^)]*\))"
TYPE_PATTERN = rf"(?:buffer\s+of\s+{BUFFER_LENGTH_PATTERN}\s+(?:[A-Za-z][A-Za-z0-9_]*(?:\.[A-Z][A-Za-z0-9_]*)?|[a-z][a-z0-9_]*)|view\s+of\s+[a-z][a-z0-9_]*|(?:[A-Za-z][A-Za-z0-9_]*\.)*[A-Z][A-Za-z0-9_]*|[a-z][a-z0-9_]*)"
MODULE_RE = re.compile(r"[A-Za-z][A-Za-z0-9_]*(?:\.[A-Za-z][A-Za-z0-9_]*)*")
EXTERNAL_SYMBOL_PATTERN = r"[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*"


def parse_source(
    source: str,
    *,
    external_phrases: tuple["PhraseTemplate", ...] = (),
    symbol_prefix: str | None = None,
) -> Program:
    return Parser(source, external_phrases=external_phrases, symbol_prefix=symbol_prefix).parse_program()


@dataclass(frozen=True)
class Line:
    number: int
    text: str
    is_header: bool
    indent: int


@dataclass(frozen=True)
class PhraseHole:
    name: str
    type_name: ValueType


PhrasePart = str | PhraseHole


@dataclass(frozen=True)
class PhraseTemplate:
    symbol: str
    parts: tuple[PhrasePart, ...]
    params: tuple[Parameter, ...]
    line: int
    return_type: ReturnType
    display_name: str


ParsedTopLevel = RecordDecl | ConstantDecl | CheckStmt | Function


class Parser:
    def __init__(
        self,
        source: str,
        *,
        external_phrases: tuple[PhraseTemplate, ...] = (),
        symbol_prefix: str | None = None,
    ):
        self.lines = self._preprocess(source)
        self.symbol_prefix = symbol_prefix
        self.external_phrases = external_phrases
        self.local_phrases: tuple[PhraseTemplate, ...] = ()
        self.phrases: tuple[PhraseTemplate, ...] = ()
        self.local_phrases = self._collect_phrase_templates()
        self.phrases = tuple(sorted((*self.local_phrases, *self.external_phrases), key=lambda template: len(template.parts), reverse=True))

    def _preprocess(self, source: str) -> list[Line]:
        lines: list[Line] = []
        for number, raw in enumerate(source.splitlines(), start=1):
            if "\t" in raw:
                raise InscriptionError("tabs are not valid indentation", number)
            indent = len(raw) - len(raw.lstrip(" "))
            stripped = raw.strip()
            if not stripped:
                continue
            if stripped.endswith(":"):
                body = stripped[:-1].strip()
                is_header = True
            else:
                body = stripped
                is_header = False
            if not body:
                raise InscriptionError("empty line is not valid syntax", number)
            lines.append(Line(number, body, is_header, indent))
        return lines

    def _collect_phrase_templates(self) -> tuple[PhraseTemplate, ...]:
        templates: list[PhraseTemplate] = []
        for line in self.lines:
            if line.indent == 0 and line.text.startswith("extern "):
                template, _return_type, _external_symbol = self._parse_extern_decl(line)
                templates.append(template)
                continue
            if not self._looks_like_phrase_header(line):
                continue
            template, _return_type = self._parse_phrase_header(line)
            templates.append(template)
        return tuple(sorted(templates, key=lambda template: len(template.parts), reverse=True))

    def parse_program(self) -> Program:
        records: list[RecordDecl] = []
        constants: list[ConstantDecl] = []
        checks: list[CheckStmt] = []
        functions: list[Function] = []
        imports: list[ImportDecl] = []
        module_name: str | None = None
        index = 0
        while index < len(self.lines):
            line = self.lines[index]
            if line.indent == 0 and line.text.startswith("module "):
                if line.is_header:
                    raise InscriptionError("malformed module declaration", line.number)
                if module_name is not None:
                    raise InscriptionError("program can declare only one module", line.number)
                module_name = self._module_name(line.text[len("module ") :].strip(), line.number)
                index += 1
                continue
            if line.indent == 0 and line.text.startswith("import "):
                if line.is_header:
                    raise InscriptionError("malformed import declaration", line.number)
                imports.append(ImportDecl(self._module_name(line.text[len("import ") :].strip(), line.number), line.number))
                index += 1
                continue
            if self._looks_like_record_header(line):
                record, index = self._parse_record_decl(index)
                records.append(record)
                continue
            if line.text.startswith("constant "):
                constants.append(self._parse_constant_decl(line))
                index += 1
                continue
            if line.text.startswith("check "):
                checks.append(self._parse_check_stmt(line))
                index += 1
                continue
            if line.text.startswith("extern "):
                template, return_type, external_symbol = self._parse_extern_decl(line)
                functions.append(
                    Function(
                        template.symbol,
                        template.params,
                        return_type,
                        (),
                        line.number,
                        template.display_name,
                        external_symbol,
                    )
                )
                index += 1
                continue
            if line.text.startswith("require "):
                raise InscriptionError("require may only appear inside phrase bodies", line.number)
            if not self._looks_like_phrase_header(line):
                raise InscriptionError("expected phrase definition, record declaration, constant declaration, check, extern, module, or import", line.number)
            template, return_type = self._parse_phrase_header(line)
            body, index = self._parse_phrase_body(index + 1, template, line.number)
            functions.append(
                Function(
                    template.symbol,
                    template.params,
                    return_type,
                    tuple(body),
                    line.number,
                    template.display_name,
                )
            )
        seen_imports: set[str] = set()
        for imported in imports:
            if imported.module in seen_imports:
                raise InscriptionError(f"module {imported.module} is already imported", imported.line)
            seen_imports.add(imported.module)
        return Program(tuple(records), tuple(constants), tuple(checks), tuple(functions), module_name, tuple(imports))

    def _looks_like_record_header(self, line: Line) -> bool:
        return (
            line.is_header
            and re.fullmatch(r"(?:record|layout record|packed layout record) [A-Za-z][A-Za-z0-9_]*", line.text)
            is not None
        )

    def _looks_like_top_level_item(self, line: Line) -> bool:
        return (
            self._looks_like_phrase_header(line)
            or self._looks_like_record_header(line)
            or (line.indent == 0 and (line.text.startswith("constant ") or line.text.startswith("check ") or line.text.startswith("extern ") or line.text.startswith("module ") or line.text.startswith("import ") or line.text.startswith("require ")))
        )

    def _parse_record_decl(self, index: int) -> tuple[RecordDecl, int]:
        line = self.lines[index]
        match = re.fullmatch(r"(record|layout record|packed layout record) ([A-Za-z][A-Za-z0-9_]*)", line.text)
        if not line.is_header or match is None:
            raise InscriptionError("malformed record declaration", line.number)
        layout_kind = {"record": "value", "layout record": "natural", "packed layout record": "packed"}[match.group(1)]
        name = self._record_name(match.group(2), line.number)
        fields: list[RecordFieldDecl] = []
        field_index = index + 1
        while field_index < len(self.lines):
            current = self.lines[field_index]
            if current.indent <= line.indent:
                break
            field_match = re.fullmatch(rf"([a-z][a-z0-9_]*):\s*({TYPE_PATTERN})", current.text)
            if current.is_header or field_match is None:
                raise InscriptionError("malformed record field declaration", current.number)
            fields.append(
                RecordFieldDecl(
                    self._field_name(field_match.group(1), current.number),
                    self._value_type(field_match.group(2), current.number),
                    current.number,
                )
            )
            field_index += 1
        if not fields:
            prefix = "record" if layout_kind == "value" else "layout record"
            raise InscriptionError(f"{prefix} {name} must declare at least one field", line.number)
        return RecordDecl(name, tuple(fields), line.number, layout_kind), field_index

    def _parse_constant_decl(self, line: Line) -> ConstantDecl:
        match = re.fullmatch(r"constant ([A-Za-z][A-Za-z0-9_]*):\s*([a-z][a-z0-9_]*) be (.+)", line.text)
        if line.is_header or match is None:
            raise InscriptionError("malformed constant declaration", line.number)
        raw_name = match.group(1)
        name = self._name(raw_name, line.number) if NAME_RE.fullmatch(raw_name) else raw_name
        return ConstantDecl(name, self._type_name(match.group(2), line.number), self._parse_expression(match.group(3), line.number), line.number)

    def _parse_check_stmt(self, line: Line) -> CheckStmt:
        if line.is_header:
            raise InscriptionError("malformed check", line.number)
        return CheckStmt(self._parse_expression(line.text[len("check ") :], line.number), line.number)

    def _parse_require_stmt(self, line: Line) -> RequireStmt:
        if line.is_header:
            raise InscriptionError("malformed require", line.number)
        return RequireStmt(self._parse_expression(line.text[len("require ") :], line.number), line.number)

    def _looks_like_phrase_header(self, line: Line) -> bool:
        return line.is_header and re.fullmatch(r".+? (?:gives .+|does)", line.text) is not None

    def _parse_phrase_header(self, line: Line) -> tuple[PhraseTemplate, ReturnType]:
        match = re.fullmatch(r"(.+?) (?:gives (.+)|does)", line.text)
        if not line.is_header or not match:
            raise InscriptionError("expected phrase definition", line.number)
        phrase_text = match.group(1).strip()
        return_type = self._return_type(match.group(2), line.number) if match.group(2) is not None else None
        template = self._parse_phrase_template(phrase_text, line.number, return_type)
        return template, return_type

    def _parse_extern_decl(self, line: Line) -> tuple[PhraseTemplate, ReturnType, str]:
        if line.is_header:
            raise InscriptionError("extern phrase declarations cannot have bodies", line.number)
        gives_match = re.fullmatch(
            rf"extern (.+?) gives ({TYPE_PATTERN}) as ({EXTERNAL_SYMBOL_PATTERN})",
            line.text,
        )
        if gives_match is not None:
            return_type = self._return_type(gives_match.group(2), line.number)
            template = self._parse_phrase_template(gives_match.group(1).strip(), line.number, return_type)
            return template, return_type, gives_match.group(3)
        does_match = re.fullmatch(
            rf"extern (.+?) does as ({EXTERNAL_SYMBOL_PATTERN})",
            line.text,
        )
        if does_match is not None:
            template = self._parse_phrase_template(does_match.group(1).strip(), line.number, None)
            return template, None, does_match.group(2)
        raise InscriptionError("malformed extern phrase declaration", line.number)

    def _parse_phrase_template(self, text: str, line: int, return_type: ReturnType) -> PhraseTemplate:
        parts: list[PhrasePart] = []
        params: list[Parameter] = []
        param_names: set[str] = set()
        pos = 0
        holes = list(
            re.finditer(
                rf"\b([a-z][a-z0-9_]*):\s*({TYPE_PATTERN})\b",
                text,
            )
        )
        for match in holes:
            self._append_literal_parts(parts, text[pos : match.start()], line)
            name = self._name(match.group(1), line)
            type_name = self._value_type(match.group(2), line)
            if name in param_names:
                raise InscriptionError(f"duplicate parameter '{name}'", line)
            param_names.add(name)
            params.append(Parameter(name, type_name))
            parts.append(PhraseHole(name, type_name))
            pos = match.end()
        self._append_literal_parts(parts, text[pos:], line)
        if not parts or all(isinstance(part, PhraseHole) for part in parts):
            raise InscriptionError("phrase definition must include literal words", line)
        symbol = self._phrase_symbol(parts, line)
        if self.symbol_prefix is not None:
            symbol = f"{self.symbol_prefix}__{symbol}"
        display_name = " ".join("_" if isinstance(part, PhraseHole) else part for part in parts)
        return PhraseTemplate(symbol, tuple(parts), tuple(params), line, return_type, display_name)

    def _append_literal_parts(self, parts: list[PhrasePart], text: str, line: int) -> None:
        stripped = text.strip()
        if not stripped:
            return
        for word in stripped.split():
            if not NAME_RE.fullmatch(word):
                raise InscriptionError(f"invalid phrase word '{word}'", line)
            parts.append(word)

    def _phrase_symbol(self, parts: list[PhrasePart], line: int) -> str:
        leading: list[str] = []
        for part in parts:
            if isinstance(part, PhraseHole):
                break
            leading.append(part)
        if not leading:
            raise InscriptionError("phrase definition must start with literal words", line)
        while len(leading) > 1 and leading[-1] in CONNECTOR_WORDS:
            leading.pop()
        symbol = "_".join(leading)
        if not NAME_RE.fullmatch(symbol):
            raise InscriptionError(f"invalid generated function name '{symbol}'", line)
        return symbol

    def _parse_phrase_body(
        self, index: int, template: PhraseTemplate, line: int
    ) -> tuple[list[BodyStmt | ReturnStmt], int]:
        if template.return_type is None:
            return self._parse_does_body(index, line)
        return self._parse_gives_body(index, template.symbol, line)

    def _parse_does_body(self, index: int, line: int) -> tuple[list[BodyStmt | ReturnStmt], int]:
        body_items: list[BodyStmt] = []
        while index < len(self.lines):
            current = self.lines[index]
            if self._looks_like_top_level_item(current):
                break
            if not self._is_body_item_start(current, include_phrase_calls=True):
                if current.is_header:
                    raise InscriptionError("unexpected ':' inside does phrase body", current.number)
                if self._parse_phrase_call_expr(current) is not None:
                    item, index = self._parse_body_item(index, include_phrase_calls=True)
                    body_items.append(item)
                    continue
                raise InscriptionError("does phrase body cannot end with a value expression", current.number)
            item, index = self._parse_body_item(index, include_phrase_calls=True)
            body_items.append(item)
        if not body_items:
            raise InscriptionError("does phrase body must contain at least one step", line)
        return body_items, index

    def _parse_gives_body(self, index: int, name: str, line: int) -> tuple[list[BodyStmt | ReturnStmt], int]:
        body_items: list[BodyStmt] = []
        value_lines: list[Line] = []
        while index < len(self.lines):
            current = self.lines[index]
            if self._looks_like_top_level_item(current):
                break
            if self._is_gives_body_item_start(current, index):
                if value_lines:
                    if current.text.startswith("let "):
                        raise InscriptionError("let bindings must appear before the value block", current.number)
                    raise InscriptionError("body items must appear before the value block", current.number)
                item, index = self._parse_body_item(index, include_phrase_calls=True)
                body_items.append(item)
            else:
                if current.is_header:
                    raise InscriptionError("unexpected ':' inside phrase body", current.number)
                value_lines.append(current)
                index += 1
        if not value_lines:
            raise InscriptionError("gives phrase body must end with a value expression", line)
        return [*body_items, ReturnStmt(self._parse_value_block(value_lines), value_lines[-1].number)], index

    def _is_gives_body_item_start(self, line: Line, index: int) -> bool:
        if self._is_body_item_start(line, include_phrase_calls=False):
            return True
        call = self._parse_phrase_call_expr(line)
        if call is None:
            return False
        target = self._template_for_call(call)
        if target is not None and target.return_type is None:
            return True
        return self._has_following_body_line(index + 1, line.indent)

    def _has_following_body_line(self, index: int, indent: int) -> bool:
        while index < len(self.lines):
            current = self.lines[index]
            if self._looks_like_top_level_item(current):
                return False
            if current.indent < indent:
                return False
            return True
        return False

    def _is_body_item_start(self, line: Line, *, include_phrase_calls: bool) -> bool:
        return (
            line.text.startswith("check ")
            or line.text.startswith("require ")
            or line.text.startswith("let ")
            or line.text.startswith("track ")
            or self._layout_write_match(line) is not None
            or self._field_assignment_match(line) is not None
            or self._buffer_store_match(line) is not None
            or self._assignment_match(line) is not None
            or (line.is_header and line.text.startswith("if "))
            or (line.is_header and line.text.startswith("while "))
            or (line.is_header and line.text.startswith("for "))
            or (include_phrase_calls and self._parse_phrase_call_expr(line) is not None)
        )

    def _parse_body_item(self, index: int, *, include_phrase_calls: bool) -> tuple[BodyStmt, int]:
        current = self.lines[index]
        if current.text.startswith("check "):
            return self._parse_check_stmt(current), index + 1
        if current.text.startswith("require "):
            return self._parse_require_stmt(current), index + 1
        if current.text.startswith("let "):
            return self._parse_let(current), index + 1
        if current.text.startswith("track "):
            raise InscriptionError("`track` is not valid Inscription syntax; use `let name be ...`", current.number)
        layout_write = self._layout_write_match(current)
        if layout_write is not None:
            return self._parse_layout_write(current, layout_write), index + 1
        field_assignment = self._field_assignment_match(current)
        if field_assignment is not None:
            return self._parse_field_assignment(current, field_assignment), index + 1
        buffer_store = self._buffer_store_match(current)
        if buffer_store is not None:
            return self._parse_buffer_store(current, buffer_store), index + 1
        assignment = self._assignment_match(current)
        if assignment is not None:
            return self._parse_assignment(current, assignment), index + 1
        if current.is_header and current.text.startswith("if "):
            return self._parse_if(index)
        if current.is_header and current.text.startswith("while "):
            return self._parse_while(index)
        if current.is_header and current.text.startswith("for "):
            return self._parse_for(index)
        if include_phrase_calls:
            call = self._parse_phrase_call_expr(current)
            if call is not None:
                return CallStmt(call, current.number), index + 1
        raise InscriptionError("expected phrase body item", current.number)

    def _parse_while(self, index: int) -> tuple[WhileStmt, int]:
        line = self.lines[index]
        match = re.fullmatch(r"while (.+)", line.text)
        if not line.is_header or not match:
            raise InscriptionError("malformed while loop", line.number)
        condition = self._parse_expression(match.group(1), line.number)
        body, body_index = self._parse_step_block(index + 1, line.indent, "while body")
        if not body:
            raise InscriptionError("while loop requires an indented body", line.number)
        return WhileStmt(condition, tuple(body), line.number), body_index

    def _parse_for(self, index: int) -> tuple[ForStmt | ForEachStmt, int]:
        line = self.lines[index]
        if not line.is_header:
            raise InscriptionError("malformed for loop", line.number)
        each_match = re.fullmatch(r"for each index ([a-z][a-z0-9_]*) of ([a-z][a-z0-9_]*)", line.text)
        if each_match:
            body, body_index = self._parse_step_block(index + 1, line.indent, "for loop body")
            if not body:
                raise InscriptionError("for loop body must contain at least one step", line.number)
            return (
                ForEachStmt(
                    self._name(each_match.group(1), line.number),
                    self._name(each_match.group(2), line.number),
                    tuple(body),
                    line.number,
                ),
                body_index,
            )

        match = re.fullmatch(r"for ([a-z][a-z0-9_]*) from (.+) up to (.+?)(?: by (-?\d+))?", line.text)
        if not match:
            raise InscriptionError("malformed for loop", line.number)
        step = int(match.group(4)) if match.group(4) is not None else 1
        body, body_index = self._parse_step_block(index + 1, line.indent, "for loop body")
        if not body:
            raise InscriptionError("for loop body must contain at least one step", line.number)
        return (
            ForStmt(
                self._name(match.group(1), line.number),
                self._parse_expression(match.group(2), line.number),
                self._parse_expression(match.group(3), line.number),
                step,
                tuple(body),
                line.number,
            ),
            body_index,
        )

    def _parse_if(self, index: int) -> tuple[IfStmt, int]:
        line = self.lines[index]
        match = re.fullmatch(r"if (.+)", line.text)
        if not line.is_header or not match:
            raise InscriptionError("malformed if block", line.number)
        condition = self._parse_expression(match.group(1), line.number)
        then_body, otherwise_index = self._parse_step_block(index + 1, line.indent, "if branch")
        if not then_body:
            raise InscriptionError("if branch must contain at least one step", line.number)
        if otherwise_index >= len(self.lines):
            raise InscriptionError("if block requires otherwise", line.number)
        otherwise = self.lines[otherwise_index]
        if not otherwise.is_header or otherwise.text != "otherwise" or otherwise.indent != line.indent:
            raise InscriptionError("if block requires otherwise", line.number)
        else_body, next_index = self._parse_step_block(otherwise_index + 1, otherwise.indent, "otherwise branch")
        if not else_body:
            raise InscriptionError("otherwise branch must contain at least one step", otherwise.number)
        return IfStmt(condition, tuple(then_body), tuple(else_body), line.number), next_index

    def _parse_step_block(self, index: int, parent_indent: int, name: str) -> tuple[list[BodyStmt], int]:
        body: list[BodyStmt] = []
        body_index = index
        while body_index < len(self.lines):
            current = self.lines[body_index]
            if current.indent <= parent_indent:
                break
            if self._looks_like_top_level_item(current):
                raise InscriptionError(f"phrase definitions cannot appear inside {name}", current.number)
            if not self._is_body_item_start(current, include_phrase_calls=True):
                raise InscriptionError(
                    f"{name} only supports let bindings, assignments, phrase calls, while loops, for loops, and if blocks",
                    current.number,
                )
            item, body_index = self._parse_body_item(body_index, include_phrase_calls=True)
            body.append(item)
        return body, body_index
